engine/parser/src/main/java/ro/swl/engine/parser/SWL.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SWL.java */
package ro.swl.engine.parser;

public class SWL/*@bgen(jjtree)*/implements SWLTreeConstants, SWLConstants {/*@bgen(jjtree)*/
  protected JJTSWLState jjtree = new JJTSWLState();
  private int nestingLvl = 0;


  public static void main(String args [])
  {
    System.out.println("Reading from standard input...");
    SWL parser = new SWL(System.in);
    try
    {
      ASTSwdlApp n = parser.SwdlApp();
      n.dump("");
      System.out.println("Thank you.");
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

/** ******************************************************************** */
/** *************************  SWL GRAMMAR  **************************** */
/** ******************************************************************** */
  final public ASTSwdlApp SwdlApp() throws ParseException {
 /*@bgen(jjtree) SwdlApp */
  ASTSwdlApp jjtn000 = new ASTSwdlApp(JJTSWDLAPP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      NameDecl();
      label_1:
      while (true) {
        Module();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MODULE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void NameDecl() throws ParseException {
                  /*@bgen(jjtree) NameDecl */
  ASTNameDecl jjtn000 = new ASTNameDecl(JJTNAMEDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(APP_NAME);
      AppName();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void AppName() throws ParseException {
                 /*@bgen(jjtree) AppName */
                 ASTAppName jjtn000 = new ASTAppName(JJTAPPNAME);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(QUOTED_IDENTIFIER);
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
        jjtn000.setImageWithoutQuote(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Module() throws ParseException {
                 /*@bgen(jjtree) Module */
  ASTModule jjtn000 = new ASTModule(JJTMODULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODULE);
      ModuleName();
      ModuleBody();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ModuleName() throws ParseException {
                     /*@bgen(jjtree) ModuleName */
                     ASTModuleName jjtn000 = new ASTModuleName(JJTMODULENAME);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(NAME);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
        jjtn000.setImage(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ModuleBody() throws ParseException {
                     /*@bgen(jjtree) ModuleBody */
  ASTModuleBody jjtn000 = new ASTModuleBody(JJTMODULEBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPEN_BRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UI:
        Ui();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LOGIC:
        Logic();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOMAIN:
        Domain();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(CLOSE_BRACKET);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Ui() throws ParseException {
 /*@bgen(jjtree) Ui */
  ASTUi jjtn000 = new ASTUi(JJTUI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(UI);
      jj_consume_token(OPEN_BRACKET);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SCREEN:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        Screen();
      }
      jj_consume_token(CLOSE_BRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Screen() throws ParseException {
 /*@bgen(jjtree) Screen */
  ASTScreen jjtn000 = new ASTScreen(JJTSCREEN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SCREEN);
      ScreenName();
      jj_consume_token(OPEN_BRACKET);
      MvcArea();
      jj_consume_token(CLOSE_BRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ScreenName() throws ParseException {
 /*@bgen(jjtree) ScreenName */
  ASTScreenName jjtn000 = new ASTScreenName(JJTSCREENNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(NAME);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Model() throws ParseException {
 /*@bgen(jjtree) Model */
  ASTModel jjtn000 = new ASTModel(JJTMODEL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODEL);
      GenericBlock();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void Controller() throws ParseException {
                    /*@bgen(jjtree) Controller */
  ASTController jjtn000 = new ASTController(JJTCONTROLLER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CONTROLLER);
      GenericBlock();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void GenericBlock() throws ParseException {
 /*@bgen(jjtree) GenericBlock */
  ASTGenericBlock jjtn000 = new ASTGenericBlock(JJTGENERICBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPEN_BRACKET);
         token_source.SwitchTo(JsContentState);
         nestingLvl++;
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPEN_BRACKET:
        case ANY_NON_OPEN_CLOSE:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ANY_NON_OPEN_CLOSE:
          jj_consume_token(ANY_NON_OPEN_CLOSE);
          break;
        case OPEN_BRACKET:
          GenericBlock();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(CLOSE_BRACKET);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    nestingLvl--;
    if ( nestingLvl == 0 )
    {
      token_source.SwitchTo(DEFAULT);
    }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void MvcArea() throws ParseException {
                  /*@bgen(jjtree) MvcArea */
  ASTMvcArea jjtn000 = new ASTMvcArea(JJTMVCAREA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODEL:
        Model();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTROLLER:
        Controller();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INPUT:
        case INPUT_AREA:
        case INPUT_FILE:
        case CHECKBOX:
        case SELECTBOX:
        case TEXT:
        case RADIO:
        case RADIOS:
        case BUTTON:
        case BUTTONGROUP:
        case IMG:
        case VERTICAL_LAYOUT:
        case HORIZONTAL_LAYOUT:
        case HORIZONTAL_FORM:
        case SECTION:
        case NO_LABEL_FLAG:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INPUT:
        case NO_LABEL_FLAG:
          Input();
          break;
        case INPUT_FILE:
          InputFile();
          break;
        case INPUT_AREA:
          InputArea();
          break;
        case CHECKBOX:
          Checkbox();
          break;
        case SELECTBOX:
          Selectbox();
          break;
        case TEXT:
          Text();
          break;
        case RADIO:
          Radio();
          break;
        case RADIOS:
          Radios();
          break;
        case IMG:
          Img();
          break;
        case BUTTON:
          Button();
          break;
        case BUTTONGROUP:
          ButtonGroup();
          break;
        case VERTICAL_LAYOUT:
          VerticalLayout();
          break;
        case HORIZONTAL_LAYOUT:
          HorizontalLayout();
          break;
        case HORIZONTAL_FORM:
          HorizontalForm();
          break;
        case SECTION:
          Section();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public ASTVerticalLayout VerticalLayout() throws ParseException {
                                      /*@bgen(jjtree) VerticalLayout */
  ASTVerticalLayout jjtn000 = new ASTVerticalLayout(JJTVERTICALLAYOUT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VERTICAL_LAYOUT);
      StdLayoutDescription();
      jj_consume_token(OPEN_BRACKET);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ROW:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        LayoutRow();
      }
      jj_consume_token(CLOSE_BRACKET);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }
